--- a/PrivateAutopsyAssociatesServices/style.css
+++ b/PrivateAutopsyAssociatesServices/style.css
@@ -1133,6 +1133,52 @@ footer {
   }
 }
 /* For large devices */
+
+@media screen and (max-width: 1024px){
+  .bady{
+    width: 100%;
+    height: 100%;
+  }
+  
+  .banner-text1{
+    padding: 65px;
+    margin-left: 50px;
+    text-align: center; 
+  }
+  
+  .banner-text1 h2{
+    letter-spacing: 5px;
+    font-weight: 500;
+    font-size: 24px;
+    color: white;
+  }
+  
+  .banner-text1 h4{
+    margin-left: 5px;
+    font-size: 20px;
+    color: #C2C3C3;
+    font-weight: 200;
+  }
+
+  .container5{
+    width: 100%;
+    height: 20%;
+  }
+  .banner5{
+    width: 100%;
+    height: 17vh;
+    background-color: #192957;
+    background-size: cover;
+    background-position: 69%;
+    
+  }
+  .form .column {
+    flex-wrap: wrap;
+  }
+  .form :where(.gender-option, .gender){
+    row-gap: 15px;
+  }
+}
 @media screen and (min-width: 1118px) {
   /* Nav */
   .nav {
@@ -1228,6 +1274,52 @@ footer {
 @media screen and (min-width: 1152px) {
   .container {
     margin-inline: auto;
+  }
+}
+
+@media screen and (max-width: 820px){
+  .bady{
+    width: 100%;
+    height: 100%;
+  }
+  
+  .banner-text1{
+    padding: 65px;
+    margin-left: 50px;
+    text-align: center; 
+  }
+  
+  .banner-text1 h2{
+    letter-spacing: 5px;
+    font-weight: 500;
+    font-size: 20px;
+    color: white;
+  }
+  
+  .banner-text1 h4{
+    margin-left: 5px;
+    font-size: 20px;
+    color: #C2C3C3;
+    font-weight: 200;
+  }
+
+  .container5{
+    width: 100%;
+    height: 20%;
+  }
+  .banner5{
+    width: 100%;
+    height: 17vh;
+    background-color: #192957;
+    background-size: cover;
+    background-position: 69%;
+    
+  }
+  .form .column {
+    flex-wrap: wrap;
+  }
+  .form :where(.gender-option, .gender){
+    row-gap: 15px;
   }
 }
 
@@ -1562,5 +1654,189 @@ footer {
     font-size: 18px;
     margin-top: 20px;
     margin-bottom: 10px;
+  }
+}
+
+@media screen and (max-width: 540px){
+  .bady{
+    width: 100%;
+    height: 100%;
+  }
+  
+  .banner-text1{
+    padding: 65px;
+    margin-left: 50px;
+    text-align: center; 
+  }
+  
+  .banner-text1 h2{
+    letter-spacing: 5px;
+    font-weight: 500;
+    font-size: 12px;
+    color: white;
+  }
+  
+  .banner-text1 h4{
+    margin-left: 5px;
+    font-size: 10px;
+    color: #C2C3C3;
+    font-weight: 200;
+  }
+
+  .container5{
+    width: 100%;
+    height: 20%;
+  }
+  .banner5{
+    width: 100%;
+    height: 17vh;
+    background-color: #192957;
+    background-size: cover;
+    background-position: 69%;
+    
+  }
+  .form .column {
+    flex-wrap: wrap;
+  }
+  .form :where(.gender-option, .gender){
+    row-gap: 15px;
+  }
+}
+@media screen and (max-width: 434px){
+  .bady{
+    width: 100%;
+    height: 100%;
+  }
+  
+  .banner-text1{
+    padding: 65px;
+    margin-left: 50px;
+    text-align: center; 
+  }
+  
+  .banner-text1 h2{
+    letter-spacing: 5px;
+    font-weight: 500;
+    font-size: 12px;
+    color: white;
+  }
+  
+  .banner-text1 h4{
+    margin-left: 5px;
+    font-size: 10px;
+    color: #C2C3C3;
+    font-weight: 200;
+  }
+
+  .container5{
+    width: 100%;
+    height: 20%;
+  }
+  .banner5{
+    width: 100%;
+    height: 17vh;
+    background-color: #192957;
+    background-size: cover;
+    background-position: 69%;
+    
+  }
+  .form .column {
+    flex-wrap: wrap;
+  }
+  .form :where(.gender-option, .gender){
+    row-gap: 15px;
+  }
+}
+
+
+@media screen and (max-width: 414px){
+  .bady{
+    width: 100%;
+    height: 100%;
+  }
+  
+  .banner-text1{
+    padding: 65px;
+    margin-left: 50px;
+    text-align: center; 
+  }
+  
+  .banner-text1 h2{
+    letter-spacing: 5px;
+    font-weight: 500;
+    font-size: 12px;
+    color: white;
+  }
+  
+  .banner-text1 h4{
+    margin-left: 5px;
+    font-size: 10px;
+    color: #C2C3C3;
+    font-weight: 200;
+  }
+
+  .container5{
+    width: 100%;
+    height: 20%;
+  }
+  .banner5{
+    width: 100%;
+    height: 17vh;
+    background-color: #192957;
+    background-size: cover;
+    background-position: 69%;
+    
+  }
+  .form .column {
+    flex-wrap: wrap;
+  }
+  .form :where(.gender-option, .gender){
+    row-gap: 15px;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .bady{
+    width: 100%;
+    height: 100%;
+  }
+  
+  .banner-text1{
+    padding: 40px;
+    margin-left: 50px;
+    text-align: center; 
+  }
+  
+  .banner-text1 h2{
+    letter-spacing: 5px;
+    font-weight: 500;
+    font-size: 12px;
+    color: white;
+  }
+  
+  .banner-text1 h4{
+    margin-left: 5px;
+    font-size: 12px;
+    color: #C2C3C3;
+    font-weight: 200;
+  }
+
+  .container5{
+    width: 100%;
+    height: 20%;
+  }
+  .banner5{
+    width: 100%;
+    height: 20vh;
+    background-color: #192957;
+    background-size: cover;
+    background-position: 69%;
+    
+  }
+  .form .column {
+    flex-wrap: wrap;
+  }
+  .form :where(.gender-option, .gender){
+    row-gap: 15px;
   }
 }
